# prometheus-hdparm-exporter

./: .gitignore  README.md  pyproject.toml
apparmor.d/: opt.prometheus_hdparm_exporter
docs/: granafa_hdparm.png.license
src/prometheus_hdparm_exporter/: main.py
systemd/: prometheus-hdparm-exporter.service
tests/: test_main.py
